# FileCompression

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ReadMe.md  main.cpp
FileManipulation/: FileData.cpp  LoadData.cpp  LoadData.h
headers/FileManipulation/: FileData.h  FileManipulationHelperMethod.h  LoadData.cpp  LoadData.h
headers/ThreadFunctionality/: ThreadPool.cpp  ThreadPool.h  ThreadPool.tpp  ThreadPoolInterface.h
headers/configs/: OSConfig.h
test/: CMakeLists.txt  FileDataTests.cpp  LoadDataTests.cpp  ThreadPoolTests.cpp  hello_test.cpp  main_test.cpp
